CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(SQLite REQUIRED)

INCLUDE_DIRECTORIES(${SQLITE_INCLUDE_DIR})

ADD_LIBRARY(sqlitepp STATIC
	database.cpp statement.cpp misc.cpp)

TARGET_LINK_LIBRARIES(sqlitepp ${SQLITE_LIBRARIES})

IF(SQLITEPP_EXAMPLE)
    ADD_EXECUTABLE(example example.cpp)
    TARGET_LINK_LIBRARIES(example sqlitepp)
ENDIF(SQLITEPP_EXAMPLE)
